[package]
authors = ["Zondax GmbH <info@zondax.ch>"]
name = "rslib"
version = "0.1.0"
edition = "2018"
readme = "README.md"
resolver = "2"


[lib]
name = "rslib"
crate-type = ["staticlib"]

[dependencies]
no-std-compat = { version = "0.4.1" }
numtoa = "0.2.4"
arrayref = "0.3.6"
base64 = {version = "0.13.0", default-features = false }
hex = { version = "0.4", default-features = false }

[dependencies.nom]
version = "5.1.2"
default-features = false

[dependencies.arrayvec]
version = "0.5.1"
default-features = false

[target.thumbv6m-none-eabi.dev-dependencies]
panic-halt = "0.2.0"

[dev-dependencies]
no-std-compat = { version = "0.4.1", features = ["std"] }
serde_json = "1.0.56"
hex = { version = "0.4" }
serde = { version="1.0", features = ["derive"] }
sha2 = {version = "0.9.1"}
base64 = {version = "0.13.0"}


[target.'cfg(fuzzing)'.dependencies]
sha2 = {version = "0.9.1"}

[profile.release]
lto=false
codegen-units = 1
debug=true
opt-level = "s"

[profile.dev]
panic = "abort"
