[package]
authors = ["Zondax GmbH <info@zondax.ch>"]
name = "rslib"
version = "0.1.0"
edition = "2018"
readme = "README.md"
resolver = "2"

[lib]
name = "rslib"
crate-type = ["rlib"]
path = "../src/lib.rs"

[features]
clippy = []
fuzzing = [
    "no-std-compat/std",
    "sha2",              # Add sha2 as a dependency when fuzzing is enabled
]

[dependencies]
no-std-compat = { version = "0.4.1" }
numtoa = "0.2.4"
arrayref = "0.3.6"
base64 = { version = "0.13.0", default-features = false }
hex = { version = "0.4", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-core = { version = "0.4.0", features = ["std"] }
nom = { version = "7.1.2", default-features = false }
lexical-core = { version = "0.7", features = ["libm"] }
# Make sha2 an optional dependency, enabled by the fuzzing feature
sha2 = { version = "0.9.1", optional = true }

[dependencies.arrayvec]
version = "0.5.1"
default-features = false

[target.thumbv6m-none-eabi.dev-dependencies]
panic-halt = "0.2.0"

[dev-dependencies]
no-std-compat = { version = "0.4.1", features = ["std"] }
hex = { version = "0.4" }
serde = { version = "1.0", features = ["derive"] }
sha2 = { version = "0.9.1" }
base64 = { version = "0.13.0" }

# Additional dependencies for fuzzing
[target.'cfg(feature = "fuzzing")'.dependencies]
hex = { version = "0.4" }
serde-json-core = { version = "0.4.0", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
base64 = { version = "0.13.0" }
lexical-core = { version = "0.7", features = ["libm"] }

[profile.release]
lto = false
codegen-units = 1
debug = true
opt-level = "s"

[profile.dev]
panic = "abort"
